--- a/index.html
+++ b/index.html
@@ -338,9 +338,11 @@
               <tr>
                 <td class="px-4 py-3">3</td>
                 <td class="px-4 py-3">Sep 18</td>
-                <td class="px-4 py-3 font-medium">Policy search</td>
+                <td class="px-4 py-3 font-medium">Approximations and Search</td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">N/A</td>
+                <td class="px-4 py-3">
+  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day5slides.pdf" target="_blank" rel="noopener">Slides</a>
+</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/_WgNdR4xt0FswwLBm7H4MYpwCnH7z_gmmSYXneK3U3A5Eve21gVEGfbveT1H20cG.IfiiDGnRtN5-_fZE"target="_blank" rel="noopener">Recording</a>
                 </td>
@@ -349,16 +351,18 @@
                 <td class="px-4 py-3">4</td>
                 <td class="px-4 py-3">Sep 23</td>
                 <td class="px-4 py-3 font-medium">
-                  Policy gradient optimization
+                  Policy search
                 </td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">N/A</td>
+                <td class="px-4 py-3">
+  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day6slides.pdf" target="_blank" rel="noopener">Slides</a>
+</td>
                 <td class="px-4 py-3">—</td>
               </tr>
               <tr>
                 <td class="px-4 py-3">4</td>
                 <td class="px-4 py-3">Sep 25</td>
-                <td class="px-4 py-3 font-medium">Bandits</td>
+                <td class="px-4 py-3 font-medium">Policy gradient optimization</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
@@ -366,8 +370,7 @@
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">5</td>
                 <td class="px-4 py-3">Sep 30</td>
-                <td class="px-4 py-3 font-medium">
-                  Efficient exploration in bandits
+                <td class="px-4 py-3 font-medium">Bandits
                 </td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
@@ -376,7 +379,7 @@
               <tr>
                 <td class="px-4 py-3">5</td>
                 <td class="px-4 py-3">Oct 2</td>
-                <td class="px-4 py-3 font-medium">Model-based RL</td>
+                <td class="px-4 py-3 font-medium">Efficient exploration in bandits</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
@@ -384,59 +387,57 @@
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">6</td>
                 <td class="px-4 py-3">Oct 7</td>
-                <td class="px-4 py-3 font-medium">Model-based RL continued</td>
+                <td class="px-4 py-3 font-medium">Model-based RL</td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">Efficient exploration in MDPs</td>
+                <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
               </tr>
               <tr>
                 <td class="px-4 py-3">6</td>
                 <td class="px-4 py-3">Oct 9</td>
-                <td class="px-4 py-3 font-medium">Model-free RL</td>
+                <td class="px-4 py-3 font-medium">Model-based RL continued</td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">N/A</td>
+                <td class="px-4 py-3">Efficient exploration in MDPs</td>
                 <td class="px-4 py-3">—</td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">7</td>
                 <td class="px-4 py-3">Oct 14</td>
-                <td class="px-4 py-3 font-medium">Model-free RL continued</td>
+                <td class="px-4 py-3 font-medium">Model-free RL</td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">Q learning convergence</td>
+                <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
               </tr>
               <tr>
                 <td class="px-4 py-3">7</td>
                 <td class="px-4 py-3">Oct 16</td>
                 <td class="px-4 py-3 font-medium">
-                  RL + LLM (Francisco’s Lecture)
+                  	Model-free RL continued
                 </td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">N/A</td>
+                <td class="px-4 py-3">Q learning convergence</td>
                 <td class="px-4 py-3">—</td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">8</td>
                 <td class="px-4 py-3">Oct 21</td>
-                <td class="px-4 py-3 font-medium">
-                  Imitation learning continued
-                </td>
+                <td class="px-4 py-3 font-medium">RL + LLM (Francisco’s Lecture)</td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">Expressing tasks with logic</td>
+                <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
               </tr>
               <tr>
                 <td class="px-4 py-3">8</td>
                 <td class="px-4 py-3">Oct 23</td>
-                <td class="px-4 py-3 font-medium">POMDPs: Value iteration</td>
+                <td class="px-4 py-3 font-medium">	Imitation learning continued</td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">N/A</td>
+                <td class="px-4 py-3">Expressing tasks with logic</td>
                 <td class="px-4 py-3">—</td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">9</td>
                 <td class="px-4 py-3">Oct 28</td>
-                <td class="px-4 py-3 font-medium">POMDP controller search</td>
+                <td class="px-4 py-3 font-medium">POMDPs: Value iteration</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
@@ -444,7 +445,7 @@
               <tr>
                 <td class="px-4 py-3">9</td>
                 <td class="px-4 py-3">Oct 30</td>
-                <td class="px-4 py-3 font-medium">Games: Matrix games</td>
+                <td class="px-4 py-3 font-medium">POMDP controller search</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
@@ -460,7 +461,7 @@
               <tr>
                 <td class="px-4 py-3">10</td>
                 <td class="px-4 py-3">Nov 6</td>
-                <td class="px-4 py-3 font-medium">More games</td>
+                <td class="px-4 py-3 font-medium">Games: Markov games</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
@@ -469,7 +470,7 @@
                 <td class="px-4 py-3">11</td>
                 <td class="px-4 py-3">Nov 11</td>
                 <td class="px-4 py-3 font-medium">
-                  Games: State uncertainty in games
+                  More games
                 </td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
@@ -478,7 +479,7 @@
               <tr>
                 <td class="px-4 py-3">11</td>
                 <td class="px-4 py-3">Nov 13</td>
-                <td class="px-4 py-3 font-medium">Project discussion</td>
+                <td class="px-4 py-3 font-medium">Games: State uncertainty in games</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
@@ -486,7 +487,7 @@
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">12</td>
                 <td class="px-4 py-3">Nov 18</td>
-                <td class="px-4 py-3 font-medium">Abstraction</td>
+                <td class="px-4 py-3 font-medium">Project discussion</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
@@ -494,7 +495,7 @@
               <tr>
                 <td class="px-4 py-3">12</td>
                 <td class="px-4 py-3">Nov 20</td>
-                <td class="px-4 py-3 font-medium">TBD</td>
+                <td class="px-4 py-3 font-medium">Abstraction</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
