--- a/index.html
+++ b/index.html
@@ -357,7 +357,9 @@
                 <td class="px-4 py-3">
   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day6slides.pdf" target="_blank" rel="noopener">Slides</a>
 </td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/c8oZfdcK44091kLB1UJ6Tw6Gq58bPn1NU_tpVPi8PPIpsCqAGADbeUOLKHkhiwnF.7_zGqO1XN5MdGaEX"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr>
                 <td class="px-4 py-3">4</td>
