uploaded slides and recording for 9/25

--- a/index.html
+++ b/index.html
@@ -366,8 +366,12 @@
                 <td class="px-4 py-3">Sep 25</td>
                 <td class="px-4 py-3 font-medium">Policy gradient optimization</td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">N/A</td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day7slides.pdf" target="_blank" rel="noopener">Slides</a>
+                </td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/play/M0E7_hUkSndWAypxAFIQ_3YQbzMs4pz7HSsSkxPhqflIafhCDfzdD-orm9UyqtgybLtPht_v3tDiP2uM.65fyHPF0vuBN8H4B?eagerLoadZvaPages=sidemenu.billing.plan_management&accessLevel=meeting&canPlayFromShare=true&from=my_recording&continueMode=true&componentName=rec-play&originRequestUrl=https%3A%2F%2Fbrown.zoom.us%2Frec%2Fshare%2FIG9UDtNtukCZXjyESZgvmqv95-vTww4iNQsZbjN2aKd31PjSHM-bb_-qKcR9OCyV.ZxDAmYnfmqXMyBP2"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">5</td>
