updated lecture and OH location

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="mt-5 flex flex-wrap gap-3 text-sm">
           <span
             class="inline-flex items-center gap-2 rounded-2xl border border-slate-200/80 dark:border-slate-800/80 px-3 py-1.5"
-            >📍 Friedman Hall 108</span
+            >📍 Metcalf Auditorium</span
           >
           <span
             class="inline-flex items-center gap-2 rounded-2xl border border-slate-200/80 dark:border-slate-800/80 px-3 py-1.5"
@@ -199,7 +199,7 @@
               fpiedrah@brown.edu
             </div>
             <div class="text-sm text-slate-600 dark:text-slate-400">
-              Office hours: Monday 11–12, Location TBD
+              Office hours: Monday 11–12, Location: CIT209
             </div>
           </div>
           <div
@@ -210,7 +210,7 @@
               kaicheng_guo@brown.edu
             </div>
             <div class="text-sm text-slate-600 dark:text-slate-400">
-              Office hours: Wednesday 2–3, Location TBD
+              Office hours: Wednesday 2–3, Location: CIT209
             </div>
           </div>
           <div
@@ -221,7 +221,7 @@
               chen-en_ma@brown.edu
             </div>
             <div class="text-sm text-slate-600 dark:text-slate-400">
-              Office hours: Wednesday 2–3, Location TBD
+              Office hours: Wednesday 2–3, Location: CIT209
             </div>
           </div>
           <div
@@ -232,7 +232,7 @@
               shafiul_haque@brown.edu
             </div>
             <div class="text-sm text-slate-600 dark:text-slate-400">
-              Office hours: Monday 11–12, Location TBD
+              Office hours: Monday 11–12, Location: CIT209
             </div>
           </div>
         </div>
