--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <a class="hover:text-brand-600" href="#about">About</a>
             <a class="hover:text-brand-600" href="#staff">Staff</a>
             <a class="hover:text-brand-600" href="#schedule">Schedule</a>
+             <a class="hover:text-brand-600" href="#schedule">Homework</a>
             <a class="hover:text-brand-600" href="#syllabus">Syllabus</a>
             <a class="hover:text-brand-600" href="#resources">Resources</a>
             <a class="hover:text-brand-600" href="#policies">Policies</a>
@@ -116,6 +117,11 @@
               class="rounded-lg px-3 py-2 hover:bg-slate-50 dark:hover:bg-slate-900"
               href="#schedule"
               >Schedule</a
+            >
+            <a
+              class="rounded-lg px-3 py-2 hover:bg-slate-50 dark:hover:bg-slate-900"
+              href="#schedule"
+              >Homework</a
             >
             <a
               class="rounded-lg px-3 py-2 hover:bg-slate-50 dark:hover:bg-slate-900"
@@ -379,8 +385,12 @@
                 <td class="px-4 py-3 font-medium">Bandits
                 </td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">N/A</td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day8slides.pdf" target="_blank" rel="noopener">Slides</a>
+                </td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/Sm7Vsmk2FqsM31SxuAfXZYffzpoE1jE_er7l4as8303N6xhixPydVmWh6YZMcKaS.ZwpVcHG-nbWMfIFS"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr>
                 <td class="px-4 py-3">5</td>
@@ -414,22 +424,22 @@
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
               </tr>
-              <tr>
+              <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">7</td>
                 <td class="px-4 py-3">Oct 16</td>
+                <td class="px-4 py-3 font-medium">RL + LLM (Francisco’s Lecture)</td>
+                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">N/A</td>
+                <td class="px-4 py-3">—</td>
+              </tr>
+              <tr>
+                <td class="px-4 py-3">8</td>
+                <td class="px-4 py-3">Oct 21</td>
                 <td class="px-4 py-3 font-medium">
                   	Model-free RL continued
                 </td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">Q learning convergence</td>
-                <td class="px-4 py-3">—</td>
-              </tr>
-              <tr class="bg-slate-50/40 dark:bg-slate-900/40">
-                <td class="px-4 py-3">8</td>
-                <td class="px-4 py-3">Oct 21</td>
-                <td class="px-4 py-3 font-medium">RL + LLM (Francisco’s Lecture)</td>
-                <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
               </tr>
               <tr>
@@ -537,6 +547,109 @@
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </section>
+
+    <!-- Homework -->
+    <section id="homework" class="py-8">
+      <div class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8">
+        <h2 class="text-2xl font-bold tracking-tight">Homework Assignments</h2>
+        <div
+          class="mt-4 overflow-hidden rounded-2xl border border-slate-200/80 dark:border-slate-800/80 shadow-soft"
+        >
+          <table
+            class="min-w-full divide-y divide-slate-200 dark:divide-slate-800"
+          >
+            <thead class="bg-slate-50/60 dark:bg-slate-900/60">
+              <tr>
+                <th
+                  class="px-4 py-3 text-left text-xs font-semibold uppercase tracking-wider"
+                >
+                  HW #
+                </th>
+                <th
+                  class="px-4 py-3 text-left text-xs font-semibold uppercase tracking-wider"
+                >
+                  Topic
+                </th>
+                <th
+                  class="px-4 py-3 text-left text-xs font-semibold uppercase tracking-wider"
+                >
+                  Due Date
+                </th>
+                <th
+                  class="px-4 py-3 text-left text-xs font-semibold uppercase tracking-wider"
+                >
+                  Assignment
+                </th>
+                <th
+                  class="px-4 py-3 text-left text-xs font-semibold uppercase tracking-wider"
+                >
+                  Answer Key
+                </th>
+              </tr>
+            </thead>
+            <tbody
+              class="divide-y divide-slate-200 dark:divide-slate-800 text-sm"
+            >
+              <tr>
+                <td class="px-4 py-3 font-medium">HW1</td>
+                <td class="px-4 py-3">Probability & Simple Decisions</td>
+                <td class="px-4 py-3">Sep 29, 11:59 PM</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="#" target="_blank" rel="noopener">PDF</a>
+                </td>
+                <td class="px-4 py-3">
+                  <span class="text-slate-400">Available after due date</span>
+                </td>
+              </tr>
+              <tr class="bg-slate-50/40 dark:bg-slate-900/40">
+                <td class="px-4 py-3 font-medium">HW2</td>
+                <td class="px-4 py-3">MDP Algorithms</td>
+                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="#" target="_blank" rel="noopener">PDF</a>
+                </td>
+                <td class="px-4 py-3">
+                  <span class="text-slate-400">Available after due date</span>
+                </td>
+              </tr>
+              <tr>
+                <td class="px-4 py-3 font-medium">HW3</td>
+                <td class="px-4 py-3">Policy Search & Bandits</td>
+                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="#" target="_blank" rel="noopener">PDF</a>
+                </td>
+                <td class="px-4 py-3">
+                  <span class="text-slate-400">Available after due date</span>
+                </td>
+              </tr>
+              <tr class="bg-slate-50/40 dark:bg-slate-900/40">
+                <td class="px-4 py-3 font-medium">HW4</td>
+                <td class="px-4 py-3">Reinforcement Learning</td>
+                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="#" target="_blank" rel="noopener">PDF</a>
+                </td>
+                <td class="px-4 py-3">
+                  <span class="text-slate-400">Available after due date</span>
+                </td>
+              </tr>
+              <tr>
+                <td class="px-4 py-3 font-medium">HW5</td>
+                <td class="px-4 py-3">POMDPs & Games</td>
+                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="#" target="_blank" rel="noopener">PDF</a>
+                </td>
+                <td class="px-4 py-3">
+                  <span class="text-slate-400">Available after due date</span>
+                </td>
               </tr>
             </tbody>
           </table>
