--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <a class="hover:text-brand-600" href="#about">About</a>
             <a class="hover:text-brand-600" href="#staff">Staff</a>
             <a class="hover:text-brand-600" href="#schedule">Schedule</a>
-             <a class="hover:text-brand-600" href="#schedule">Homework</a>
+             <a class="hover:text-brand-600" href="#homework">Homework</a>
             <a class="hover:text-brand-600" href="#syllabus">Syllabus</a>
             <a class="hover:text-brand-600" href="#resources">Resources</a>
             <a class="hover:text-brand-600" href="#policies">Policies</a>
@@ -595,7 +595,7 @@
                 <td class="px-4 py-3 font-medium">HW1</td>
                 <td class="px-4 py-3">Sep 29, 11:59 PM</td>
                 <td class="px-4 py-3">
-                  <a class="text-brand-700 hover:underline" href="#" target="_blank" rel="noopener">PDF</a>
+                  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/assignment_one.pdf" target="_blank" rel="noopener">PDF</a>
                 </td>
                 <td class="px-4 py-3">
                   <span class="text-slate-400">Available after due date</span>
