--- a/index.html
+++ b/index.html
@@ -398,7 +398,9 @@
                 <td class="px-4 py-3 font-medium">Efficient exploration in bandits</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/TE7f7Iqi5VgEektOZSogQk1mrf2nmeAQdvFbpsWuBoaEwSfcb5jSVSVlTmoqcs8.XMX1v4vZIA6TUcRp"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">6</td>
