--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 <td class="px-4 py-3">2</td>
                 <td class="px-4 py-3">Sep 9</td>
                 <td class="px-4 py-3 font-medium">
-                  Probability and Simple decisions
+                  Probability and Simple Decisions
                 </td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">
@@ -407,7 +407,9 @@
                 <td class="px-4 py-3">Oct 7</td>
                 <td class="px-4 py-3 font-medium">Model-based RL</td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">N/A</td>
+                 <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day8slides.pdf" target="_blank" rel="noopener">Slides</a>
+                </td>
                 <td class="px-4 py-3">—</td>
               </tr>
               <tr>
