fixed dead links

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                 <td class="px-4 py-3 font-medium">Model-based RL</td>
                 <td class="px-4 py-3">TBD</td>
                  <td class="px-4 py-3">
-                  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day8slides.pdf" target="_blank" rel="noopener">Slides</a>
+                  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day10slides.pdf" target="_blank" rel="noopener">Slides</a>
                 </td>
                 <td class="px-4 py-3">—</td>
               </tr>
@@ -608,9 +608,7 @@
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3 font-medium">HW2</td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">
-                  <a class="text-brand-700 hover:underline" href="#" target="_blank" rel="noopener">PDF</a>
-                </td>
+                <td class="px-4 py-3">-</td>
                 <td class="px-4 py-3">
                   <span class="text-slate-400">Available after due date</span>
                 </td>
@@ -618,9 +616,7 @@
               <tr>
                 <td class="px-4 py-3 font-medium">HW3</td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">
-                  <a class="text-brand-700 hover:underline" href="#" target="_blank" rel="noopener">PDF</a>
-                </td>
+                <td class="px-4 py-3">-</td>
                 <td class="px-4 py-3">
                   <span class="text-slate-400">Available after due date</span>
                 </td>
@@ -628,9 +624,7 @@
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3 font-medium">HW4</td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">
-                  <a class="text-brand-700 hover:underline" href="#" target="_blank" rel="noopener">PDF</a>
-                </td>
+                <td class="px-4 py-3">-</td>
                 <td class="px-4 py-3">
                   <span class="text-slate-400">Available after due date</span>
                 </td>
@@ -638,9 +632,7 @@
               <tr>
                 <td class="px-4 py-3 font-medium">HW5</td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">
-                  <a class="text-brand-700 hover:underline" href="#" target="_blank" rel="noopener">PDF</a>
-                </td>
+                <td class="px-4 py-3">-</td>
                 <td class="px-4 py-3">
                   <span class="text-slate-400">Available after due date</span>
                 </td>
