--- a/index.html
+++ b/index.html
@@ -410,7 +410,9 @@
                  <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/cs2951f/2025/day10slides.pdf" target="_blank" rel="noopener">Slides</a>
                  </td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/lO6DKCHqYn2Sjv9eh3FmSgR0Zo5AYA54wVEU_LRJjN9aM3_O7gvEc2Jru-jCiANe.CozV-_IcY40BF-wx"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr>
                 <td class="px-4 py-3">6</td>
