uploaded slides for 10/9

--- a/index.html
+++ b/index.html
@@ -419,7 +419,9 @@
                 <td class="px-4 py-3">Oct 9</td>
                 <td class="px-4 py-3 font-medium">Model-based RL continued</td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">Efficient exploration in MDPs</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day11slides.pdf" target="_blank" rel="noopener">Slides</a>
+                </td>
                 <td class="px-4 py-3">—</td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
