--- a/index.html
+++ b/index.html
@@ -422,7 +422,9 @@
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day11slides.pdf" target="_blank" rel="noopener">Slides</a>
                 </td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/yxvtaKFwlzXMjE0Jgy_W6VVvkh7NhSVkIlOaEAR9PUmwPw5mmsGzUg7U6r-AeJPO.Rvi4tQjzYFW5iTVY"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">7</td>
