updated schedule and assignemt2

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
               <tr>
                 <td class="px-4 py-3">6</td>
                 <td class="px-4 py-3">Oct 9</td>
-                <td class="px-4 py-3 font-medium">Model-based RL continued</td>
+                <td class="px-4 py-3 font-medium">Model-free RL</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day11slides.pdf" target="_blank" rel="noopener">Slides</a>
@@ -429,7 +429,7 @@
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">7</td>
                 <td class="px-4 py-3">Oct 14</td>
-                <td class="px-4 py-3 font-medium">Model-free RL</td>
+                <td class="px-4 py-3 font-medium">Model-free RL continued</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
@@ -613,8 +613,10 @@
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3 font-medium">HW2</td>
-                <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">-</td>
+                <td class="px-4 py-3">Oct 20, 11:59 PM</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/assignment_two.pdf" target="_blank" rel="noopener">PDF</a>
+                </td>
                 <td class="px-4 py-3">
                   <span class="text-slate-400">Available after due date</span>
                 </td>
