--- a/index.html
+++ b/index.html
@@ -432,7 +432,9 @@
                 <td class="px-4 py-3 font-medium">Model-free RL continued</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/xoGyUGrNWQQd6EIwgKRIZNusqJIty5pohdhqJr93KU5cNlb_2mgEGad8MncPs7-x._d4HqEcVq3vqF_lp"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">7</td>
