uploaded 10/16 slides and recording

--- a/index.html
+++ b/index.html
@@ -441,8 +441,12 @@
                 <td class="px-4 py-3">Oct 16</td>
                 <td class="px-4 py-3 font-medium">RL + LLM (Francisco’s Lecture)</td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">N/A</td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day13slides.pptx" target="_blank" rel="noopener">Slides</a>
+                </td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://drive.google.com/file/d/1wWaQ1KAo28yePGXjobKWqnuYALlIQRAZ/view?usp=sharing"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr>
                 <td class="px-4 py-3">8</td>
