uploaded 10/23 slides and recording, changed 10/21's topic to cancellde, changed project presentation to projection discussion

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                 <td class="px-4 py-3">8</td>
                 <td class="px-4 py-3">Oct 21</td>
                 <td class="px-4 py-3 font-medium">
-                  	Model-free RL continued
+                  	Cancelled 
                 </td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">Q learning convergence</td>
@@ -461,10 +461,14 @@
               <tr>
                 <td class="px-4 py-3">8</td>
                 <td class="px-4 py-3">Oct 23</td>
-                <td class="px-4 py-3 font-medium">	Imitation learning continued</td>
+                <td class="px-4 py-3 font-medium">Tasks</td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">Expressing tasks with logic</td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day14slides.pdf" target="_blank" rel="noopener">Slides</a>
+                </td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/A_9ULPwemVKmxNVwpmfYfZfiHG5alYgn22uHQ-vC-PnVeaNyDgnENUTp1gnmfJzR.0-BuC0zYXFM5i2qh"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">9</td>
@@ -551,7 +555,7 @@
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">14</td>
                 <td class="px-4 py-3">Dec 2</td>
-                <td class="px-4 py-3 font-medium">Project presentations</td>
+                <td class="px-4 py-3 font-medium">Project discussion</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
@@ -559,7 +563,7 @@
               <tr>
                 <td class="px-4 py-3">14</td>
                 <td class="px-4 py-3">Dec 4</td>
-                <td class="px-4 py-3 font-medium">Project presentations</td>
+                <td class="px-4 py-3 font-medium">Project discussion</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
