--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 <td class="px-4 py-3">1</td>
                 <td class="px-4 py-3">Sep 4</td>
                 <td class="px-4 py-3 font-medium">Introduction</td>
-                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">Chapter 1</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day1slides.pdf"
                     target="_blank" rel="noopener">Slides</a>
@@ -311,7 +311,7 @@
                 <td class="px-4 py-3 font-medium">
                   Probability and Simple Decisions
                 </td>
-                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">Chapter 2</td>
                 <td class="px-4 py-3">
   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day2slides.pdf" target="_blank" rel="noopener">Slides</a>
 </td>
@@ -323,7 +323,7 @@
                 <td class="px-4 py-3">2</td>
                 <td class="px-4 py-3">Sep 11</td>
                 <td class="px-4 py-3 font-medium">Probability and Simple Decisions continued</td>
-                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">Chapter 6</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/2AhXRdYrdRT_UJuvu4CyKuNhBh8oinMabdJHxEiUpTBlMr8Ek-ezM3udf6s9d5Ft.oEX5o1qKFJkse6ZZ"target="_blank" rel="noopener">Recording</a>
@@ -333,7 +333,7 @@
                 <td class="px-4 py-3">3</td>
                 <td class="px-4 py-3">Sep 16</td>
                 <td class="px-4 py-3 font-medium">Algorithms for MDPs</td>
-                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">Chapter 7</td>
                 <td class="px-4 py-3">
   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day4slides.pdf" target="_blank" rel="noopener">Slides</a>
 </td>
@@ -345,7 +345,7 @@
                 <td class="px-4 py-3">3</td>
                 <td class="px-4 py-3">Sep 18</td>
                 <td class="px-4 py-3 font-medium">Approximations and Search</td>
-                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">Chapter 8, 9</td>
                 <td class="px-4 py-3">
   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day5slides.pdf" target="_blank" rel="noopener">Slides</a>
 </td>
@@ -359,7 +359,7 @@
                 <td class="px-4 py-3 font-medium">
                   Policy search
                 </td>
-                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">Chapter 10, 11</td>
                 <td class="px-4 py-3">
   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day6slides.pdf" target="_blank" rel="noopener">Slides</a>
 </td>
@@ -371,7 +371,7 @@
                 <td class="px-4 py-3">4</td>
                 <td class="px-4 py-3">Sep 25</td>
                 <td class="px-4 py-3 font-medium">Policy gradient optimization</td>
-                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">Chapter 10, 11</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day7slides.pdf" target="_blank" rel="noopener">Slides</a>
                 </td>
@@ -384,7 +384,7 @@
                 <td class="px-4 py-3">Sep 30</td>
                 <td class="px-4 py-3 font-medium">Bandits
                 </td>
-                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">Chapter 15</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day8slides.pdf" target="_blank" rel="noopener">Slides</a>
                 </td>
@@ -396,7 +396,7 @@
                 <td class="px-4 py-3">5</td>
                 <td class="px-4 py-3">Oct 2</td>
                 <td class="px-4 py-3 font-medium">Efficient exploration in bandits</td>
-                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">Chapter 15</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/TE7f7Iqi5VgEektOZSogQk1mrf2nmeAQdvFbpsWuBoaEwSfcb5jSVSVlTmoqcs8.XMX1v4vZIA6TUcRp"target="_blank" rel="noopener">Recording</a>
@@ -406,7 +406,7 @@
                 <td class="px-4 py-3">6</td>
                 <td class="px-4 py-3">Oct 7</td>
                 <td class="px-4 py-3 font-medium">Model-based RL</td>
-                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">Chapter 16</td>
                  <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/cs2951f/2025/day10slides.pdf" target="_blank" rel="noopener">Slides</a>
                  </td>
@@ -418,7 +418,7 @@
                 <td class="px-4 py-3">6</td>
                 <td class="px-4 py-3">Oct 9</td>
                 <td class="px-4 py-3 font-medium">Model-free RL</td>
-                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">Chpater 17</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day11slides.pdf" target="_blank" rel="noopener">Slides</a>
                 </td>
@@ -430,7 +430,7 @@
                 <td class="px-4 py-3">7</td>
                 <td class="px-4 py-3">Oct 14</td>
                 <td class="px-4 py-3 font-medium">Model-free RL continued</td>
-                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">Chapter 17</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/xoGyUGrNWQQd6EIwgKRIZNusqJIty5pohdhqJr93KU5cNlb_2mgEGad8MncPs7-x._d4HqEcVq3vqF_lp"target="_blank" rel="noopener">Recording</a>
@@ -462,7 +462,7 @@
                 <td class="px-4 py-3">8</td>
                 <td class="px-4 py-3">Oct 23</td>
                 <td class="px-4 py-3 font-medium">Tasks</td>
-                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">Chapter 18</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day14slides.pdf" target="_blank" rel="noopener">Slides</a>
                 </td>
@@ -474,15 +474,17 @@
                 <td class="px-4 py-3">9</td>
                 <td class="px-4 py-3">Oct 28</td>
                 <td class="px-4 py-3 font-medium">POMDPs: Value iteration</td>
-                <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">N/A</td>
+                <td class="px-4 py-3">Chapter 20-23</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day15slides.pdf" target="_blank" rel="noopener">Slides</a>
+                </td>
                 <td class="px-4 py-3">—</td>
               </tr>
               <tr>
                 <td class="px-4 py-3">9</td>
                 <td class="px-4 py-3">Oct 30</td>
                 <td class="px-4 py-3 font-medium">POMDP controller search</td>
-                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">Chapter 20-23</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
               </tr>
@@ -490,7 +492,7 @@
                 <td class="px-4 py-3">10</td>
                 <td class="px-4 py-3">Nov 4</td>
                 <td class="px-4 py-3 font-medium">Games: Markov games</td>
-                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">Chapter 24, 25</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
               </tr>
@@ -498,7 +500,7 @@
                 <td class="px-4 py-3">10</td>
                 <td class="px-4 py-3">Nov 6</td>
                 <td class="px-4 py-3 font-medium">Games: Markov games</td>
-                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">Chapter 24, 25</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
               </tr>
@@ -508,7 +510,7 @@
                 <td class="px-4 py-3 font-medium">
                   More games
                 </td>
-                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">Chapter 26, 27</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
               </tr>
@@ -516,7 +518,7 @@
                 <td class="px-4 py-3">11</td>
                 <td class="px-4 py-3">Nov 13</td>
                 <td class="px-4 py-3 font-medium">Games: State uncertainty in games</td>
-                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3">Chapter 26, 27</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
               </tr>
