--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                   	Cancelled 
                 </td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">Q learning convergence</td>
+                <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
               </tr>
               <tr>
