--- a/index.html
+++ b/index.html
@@ -473,26 +473,28 @@
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">9</td>
                 <td class="px-4 py-3">Oct 28</td>
-                <td class="px-4 py-3 font-medium">POMDPs: Value iteration</td>
-                <td class="px-4 py-3">Chapter 20-23</td>
+                <td class="px-4 py-3 font-medium">Tasks continued</td>
+                <td class="px-4 py-3">Chapter 18</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day15slides.pdf" target="_blank" rel="noopener">Slides</a>
                 </td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/Cfe4xiNIMHcmyMg8ITkWUFYuhTGsuYoppU0IwdkHmfEex3MRCVfAitCLSVY-5Zi3.9ynYydpuRsgjwPhH"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr>
                 <td class="px-4 py-3">9</td>
                 <td class="px-4 py-3">Oct 30</td>
-                <td class="px-4 py-3 font-medium">POMDP controller search</td>
-                <td class="px-4 py-3">Chapter 20-23</td>
+                <td class="px-4 py-3 font-medium">POMDPs: Value iteration</td>
+                <td class="px-4 py-3"></td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">10</td>
                 <td class="px-4 py-3">Nov 4</td>
-                <td class="px-4 py-3 font-medium">Games: Markov games</td>
-                <td class="px-4 py-3">Chapter 24, 25</td>
+                <td class="px-4 py-3 font-medium">POMDP controller search</td>
+                <td class="px-4 py-3">Chapter 20-23</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
               </tr>
@@ -508,16 +510,16 @@
                 <td class="px-4 py-3">11</td>
                 <td class="px-4 py-3">Nov 11</td>
                 <td class="px-4 py-3 font-medium">
-                  More games
+                  Games: Markov games
                 </td>
-                <td class="px-4 py-3">Chapter 26, 27</td>
+                <td class="px-4 py-3">Chapter 24, 25</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
               </tr>
               <tr>
                 <td class="px-4 py-3">11</td>
                 <td class="px-4 py-3">Nov 13</td>
-                <td class="px-4 py-3 font-medium">Games: State uncertainty in games</td>
+                <td class="px-4 py-3 font-medium">More games</td>
                 <td class="px-4 py-3">Chapter 26, 27</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
@@ -525,15 +527,15 @@
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">12</td>
                 <td class="px-4 py-3">Nov 18</td>
-                <td class="px-4 py-3 font-medium">Project discussion</td>
-                <td class="px-4 py-3">TBD</td>
+                <td class="px-4 py-3 font-medium">Games: State uncertainty in games</td>
+                <td class="px-4 py-3">Chapter 26, 27</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
               </tr>
               <tr>
                 <td class="px-4 py-3">12</td>
                 <td class="px-4 py-3">Nov 20</td>
-                <td class="px-4 py-3 font-medium">Abstraction</td>
+                <td class="px-4 py-3 font-medium">Project discussion</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
@@ -541,7 +543,7 @@
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">13</td>
                 <td class="px-4 py-3">Nov 25</td>
-                <td class="px-4 py-3 font-medium">TBD</td>
+                <td class="px-4 py-3 font-medium">Abstraction</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">—</td>
@@ -635,8 +637,10 @@
               </tr>
               <tr>
                 <td class="px-4 py-3 font-medium">HW3</td>
-                <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">-</td>
+                <td class="px-4 py-3">Nov 3, 11:59 PM</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/assignment_three.pdf" target="_blank" rel="noopener">PDF</a>
+                </td>
                 <td class="px-4 py-3">
                   <span class="text-slate-400">Available after due date</span>
                 </td>
