updated prof. OH

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
               michael_littman@brown.edu
             </div>
             <div class="text-sm text-slate-600 dark:text-slate-400">
-  Office hours: Tuesday 1pm in CIT 301 (exceptions: 9/16 3pm, 9/23 canceled, 10/14 canceled, 10/21 2pm)
+  Office hours: Tuesday 1pm in CIT 301 (exceptions: 9/16 3pm, 9/23 canceled, 10/14 canceled, 10/21 canceled, 11/4 canceled)
 </div>
           </div>
           <div
@@ -475,9 +475,7 @@
                 <td class="px-4 py-3">Oct 28</td>
                 <td class="px-4 py-3 font-medium">Tasks continued</td>
                 <td class="px-4 py-3">Chapter 18</td>
-                <td class="px-4 py-3">
-                  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day15slides.pdf" target="_blank" rel="noopener">Slides</a>
-                </td>
+                <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/Cfe4xiNIMHcmyMg8ITkWUFYuhTGsuYoppU0IwdkHmfEex3MRCVfAitCLSVY-5Zi3.9ynYydpuRsgjwPhH"target="_blank" rel="noopener">Recording</a>
                 </td>
@@ -486,9 +484,11 @@
                 <td class="px-4 py-3">9</td>
                 <td class="px-4 py-3">Oct 30</td>
                 <td class="px-4 py-3 font-medium">POMDPs: Value iteration</td>
-                <td class="px-4 py-3"></td>
-                <td class="px-4 py-3">N/A</td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">Chapter 20-23</td>
+                <td class="px-4 py-3"><a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day15slides.pdf" target="_blank" rel="noopener">Slides</a></td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/zFaJSWMEzID6dCUKiclw_3d9H_Cw7v-S8vJ5sXH0DajbCbHJ-1f5BZ9KNfWM814O.v_B9LzK23pIfgOQD"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">10</td>
