--- a/index.html
+++ b/index.html
@@ -496,7 +496,9 @@
                 <td class="px-4 py-3 font-medium">POMDP controller search</td>
                 <td class="px-4 py-3">Chapter 20-23</td>
                 <td class="px-4 py-3">N/A</td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/dPM6o_CXke_Uhp2VIPDLuTR82BI77FbFMES1RxYsuo45s3ZGHsCkhTqN1yBa7B8p.hcc1GHqjW-vW-3Gz"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr>
                 <td class="px-4 py-3">10</td>
