uploaded 11/6 recording and 11/11 slides

--- a/index.html
+++ b/index.html
@@ -503,10 +503,12 @@
               <tr>
                 <td class="px-4 py-3">10</td>
                 <td class="px-4 py-3">Nov 6</td>
-                <td class="px-4 py-3 font-medium">Games: Markov games</td>
-                <td class="px-4 py-3">Chapter 24, 25</td>
+                <td class="px-4 py-3 font-medium">POMDP: Wrap-up</td>
+                <td class="px-4 py-3">Chapter 20-23</td>
                 <td class="px-4 py-3">N/A</td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/nk6pSJmNGeJS81uSLgpDYNdZMpJvyAciC-Ox6ZuMxSQS0CszNKeajeb70S_vMg.85sEL-xcIwk2aR8l"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">11</td>
@@ -515,7 +517,7 @@
                   Games: Markov games
                 </td>
                 <td class="px-4 py-3">Chapter 24, 25</td>
-                <td class="px-4 py-3">N/A</td>
+                <td class="px-4 py-3"><a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day16slides.pdf" target="_blank" rel="noopener">Slides</a></td>
                 <td class="px-4 py-3">—</td>
               </tr>
               <tr>
