--- a/index.html
+++ b/index.html
@@ -242,6 +242,42 @@
             </div>
           </div>
         </div>
+        <div
+            class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft"
+          >
+            <div class="font-semibold">UTA · Arnie He</div>
+            <div class="text-sm text-slate-600 dark:text-slate-400">
+              arnie_he@brown.edu
+            </div>
+            <div class="text-sm text-slate-600 dark:text-slate-400">
+              Office hours: Friday 10-11, Location: CIT210
+            </div>
+          </div>
+        </div>
+        <div
+            class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft"
+          >
+            <div class="font-semibold">UTA · Sean Kim</div>
+            <div class="text-sm text-slate-600 dark:text-slate-400">
+              sean_s_kim@brown.edu
+            </div>
+            <div class="text-sm text-slate-600 dark:text-slate-400">
+              Office hours: Friday 11–12, Location: CIT210
+            </div>
+          </div>
+        </div>
+      <div
+            class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft"
+          >
+            <div class="font-semibold">UTA · Seyoung Jang</div>
+            <div class="text-sm text-slate-600 dark:text-slate-400">
+              seyoung_jang@brown.edu
+            </div>
+            <div class="text-sm text-slate-600 dark:text-slate-400">
+              Office hours: Friday 11–12, Location: CIT210
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
